--- a/Assets/style.css
+++ b/Assets/style.css
@@ -23,17 +23,19 @@ textarea {
 
 .description {
   white-space: pre-wrap;
+  width: 80%;
 }
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
+  width: 90px;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+
 }
 
 .hour {
@@ -57,15 +59,16 @@ textarea {
   color: white;
 }
 
-.saveBtn {
+.container button {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  padding: 15px;
 }
 
-.saveBtn i:hover {
+.container button:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
